x1166 Add optional labwareTypeName to FindRequest